<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_anchorGravity="center"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-201dp"
        >
    <EditText
            android:id="@+id/passwordbox"
            android:layout_width="237dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/registeruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernamebox"
            app:layout_constraintVertical_bias="0.318" />

        <EditText
            android:id="@+id/usernamebox"
            android:layout_width="234dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/registeruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailbox"
            app:layout_constraintVertical_bias="0.123" />

        <EditText
            android:id="@+id/emailbox"
            android:layout_width="236dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/registeruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullnamebox"
            app:layout_constraintVertical_bias="0.088"
            android:autofillHints="" />

        <EditText
            android:id="@+id/fullnamebox"
            android:layout_width="238dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@+id/registeruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.413" />

        <Button
            android:id="@+id/registeruser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.729"/>

        <Button
            android:id="@+id/goBack"
            android:layout_width="159dp"
            android:layout_height="41dp"
            android:text="@string/goBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registeruser"
            app:layout_constraintVertical_bias="0.34" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>