<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemViewFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="175dp"
        android:contentDescription="@string/producto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/descriptionBox"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/defaultText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/descriptionLabel"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/precio1Box"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/defaultText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/precio1Label"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.308"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/precio2Box"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/defaultText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/precio2Label"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/precio1Label"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/precio1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/precio2Label"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/precio2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/codigoLabel"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/codigo"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.651" />

    <EditText
        android:id="@+id/codigoBox"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/defaultText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/codigoLabel"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.65"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>